syntax = "proto3";
// protoc --proto_path=src/ --go_out=src/ src/first/person.proto
option go_package ="first/";

message PersonMessage{
  int32 id = 1;
  bool is_adult = 2;
  string name = 3;
  repeated int32 lucky_numbers = 4;
}